# ImageEditor

./: .gitignore  CMakeLists.txt  README.md  editor.cpp  editor.h  image_base.cpp  image_base.h  main.cpp
source/: editor.cpp  main.cpp  plugin_interface.h
